--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.main{
+	background-color:purple;
+	width:200px;
+	border:leftside;
+	border-thikess:5px;
+	border-color:green;
+    padding:10px;
+}
+#heading{
+	color:white;
+	text-decoration:underline;
+	font-size:20px;
+}
