--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 .main{
 	background-color:purple;
 	width:200px;
-	border-left-width:5px;
-	border-left-color:green;
+	border-left:5px solid green;
 	padding:10px;
 }
 #heading{
 	color:white;
 	font-size:20px;
+	text-decoration:underline;
 }
